--- a/war/css/main.css
+++ b/war/css/main.css
@@ -45,7 +45,7 @@ body{
 	color:#333;
 	background-color:#fff;
 	font-size:80%;
-	font-family:'Hiragino Kaku Gothic Pro','ƒqƒ‰ƒMƒmŠpƒS Pro W3','ƒƒCƒŠƒI',Meiryo,sans-serif;
+	font-family:'Hiragino Kaku Gothic Pro','ãƒ’ãƒ©ã‚®ãƒè§’ã‚´ Pro W3','ãƒ¡ã‚¤ãƒªã‚ª',Meiryo,sans-serif;
 	text-align:left;
 	height:auto;
 }
